# Jalen-Evans-Website

./: .gitignore
backend/: Cargo.toml
backend/.sqlx/: query-3241f366381002bb314ce5f887b4f12da9e05d609fcdafb8ae92f1e351c15e6e.json  query-7a729a13a98f7f862a7198d6b79620e325ed694450789d88f86f30212a560d41.json  query-dc1338cdc82b406dfc25006823dd270a34dfdeeae66c11ca4c0c698115042890.json  query-e7a196fd7f4f4fa74c91ff7123bc4d8318507a87b3135c055cbe88a6b7006b1a.json  query-ebad15c917c0f26ce56cfd72e34dbed148546a2e080402e9f044258c123f1143.json
backend/migrations/: 20251213043534_create_post.sql
backend/src/: db.rs  error.rs  main.rs
backend/src/models/: post.rs
backend/src/routes/: post.rs
frontend/: angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.config.ts  app.html  app.routes.ts  app.ts
frontend/src/app/components/nav-bar/: nav-bar.css  nav-bar.html  nav-bar.ts
frontend/src/app/components/post-creator/: post-creator.html  post-creator.spec.ts  post-creator.ts
frontend/src/app/components/post-item/: post-item.html  post-item.ts
frontend/src/app/components/post-list/: post-list.html  post-list.ts
frontend/src/app/pipes/: ellipse-pipe.spec.ts  ellipse-pipe.ts
frontend/src/app/services/: post.service.ts  post.ts
