[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono"] }
uuid = { version = "1", features = ["serde", "v4"]}
chrono = { version = "0.4", features = ["serde"]}
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors"]}
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"]}
dotenv = "0.15.0"